Fix overlap issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -129,11 +129,11 @@ ul.posts li {
   padding: 4rem 1rem;
   overflow: auto;
 }
-@media (min-width: 40em) {
+@media (min-width: 48em) {
   .sidebar {
     position: fixed;
     top: 0;
-    left: 0;
+    left: 2rem;
     bottom: 0;
     width: 25%;
     text-align: center;
@@ -157,22 +157,6 @@ ul.posts li {
   font-size: 3rem;
 }
 
-/* Sidebar nav */
-.sidebar-nav {
-  margin-bottom: 1rem;
-}
-.sidebar-nav-item {
-  display: block;
-  line-height: 1.75;
-}
-a.sidebar-nav-item:hover,
-a.sidebar-nav-item:focus {
-  text-decoration: underline;
-}
-.sidebar-nav-item.active {
-  font-weight: bold;
-}
-
 /* Sticky sidebar
  *
  * Add the `sidebar-sticky` class to the sidebar's container to affix it the
@@ -188,6 +172,11 @@ a.sidebar-nav-item:focus {
   }
 }
 
+.content {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
 @media (min-width: 48em) {
   .content {
     max-width: 95%;
@@ -196,10 +185,14 @@ a.sidebar-nav-item:focus {
   }
 }
 
-.content {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+@media (min-width: 64em) {
+  .content {
+    margin-left: 18rem;
+    margin-right: 0rem;
+  }
 }
+
+
 
 @media (min-width: 48em) {
   .gallery_content {
@@ -213,5 +206,3 @@ a.sidebar-nav-item:focus {
     padding-top: 2rem;
     padding-bottom: 2rem;
 }
-
-
